Release 2.1.0
- Added an header.
- Now out of beta.
- 1.15.2 and 1.16.4 support.
- Java 15.0.1 support.
- Version upgrading options added.
- Yatopia support added and JAR name checks made more flexible.
- Fixed "This JVM instance does not support server VM" error.
- Other adjustments & improvements.

Signed-off-by: Mustafa ÖNCEL <support@lifemcserver.com>